--- a/src/components/Header/NavMenu.scss
+++ b/src/components/Header/NavMenu.scss
@@ -3,31 +3,42 @@
   src: url("@assets/fonts/RussoOne-Regular.ttf");
 }
 
+.mobileNav {
+  padding-top: 64px;
+  top: 0;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
 .navMenu {
   position: fixed;
   margin: 0;
   padding: 0;
   top: 0;
-  right: -100vw;
+  right: -100%;
   width: 92vw;
-  height: 100%;
+  height: 100vh;
   overflow-x: hidden;
+  background-color: rgba(37, 23, 51, 0.6);
+  backdrop-filter: blur(4px);
+  transition: 350ms;
 }
 
 .navList {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 52px 0 0 0;
   top: 0;
   margin: 0;
-  right: -100%;
+  right: 0%;
+  display: block;
+  z-index: 5;
   flex-direction: column;
   list-style: none;
-  background-color: rgba(37, 23, 51, 0.6);
-  backdrop-filter: blur(4px);
-  transition: 350ms;
-  z-index: 0;
 
   a {
     width: 100%;
@@ -82,58 +93,8 @@
 
 .opened {
   right: 0;
-  display: block;
-  z-index: 1;
-}
-
-.navButton {
-  position: absolute;
-  right: 8px;
-  top: 4px;
-  width: 42px;
-  height: 42px;
-  border: none;
-  background: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: 350ms;
-  z-index: 2;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.rotate90 {
-  transform: rotate(-90deg);
-}
-
-.menuLogoBars {
-  width: 38px;
-  height: 3px;
-  border-radius: 3px;
-  background-color: #ffa600;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  position: relative;
-}
-
-.hide {
-  display: none;
-}
-
-.cross {
-  transform: rotate(45deg);
-  margin: 0;
-  position: absolute;
-}
-
-.crossInverted {
-  transform: rotate(-45deg);
-  margin: 0;
-  position: absolute;
+  // display: block;
+  z-index: 10;
 }
 
 .desktopScroll {
@@ -143,7 +104,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .mobile {
+  .mobileNav {
     display: none;
   }
 
